# bq-estimator

./: .gitignore  LICENSE  README.md  bq_estimator.py  setup.cfg  test_query.sql
tests/: bq_estimator_test.py
