[metadata]
name = bq-estimator
version = 0.0.0
description = estimate BigQuery usage of sql queries
author = Jonathan Clemons
author_email = j-clemons@tuta.io
url = https://github.com/j-clemons/bq-estimator
license = MIT
license_file = LICENSE

[options]
py_modules = bq_estimator
install_requires = 
    google-cloud-bigquery>=3.7.0
    dbt-bigquery>=1.0.0
python_requires = >=3.8

[options.entry_points]
console_scripts = 
    bq-est = bq_estimator:main

