[metadata]
name = bq_estimator
version = 1.0.1
description = estimate BigQuery usage of sql queries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/j-clemons/bq-estimator
author = Jonathan Clemons
author_email = j-clemons@tuta.io
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
py_modules = bq_estimator
install_requires =
    dbt-core>=1.5.0
    google-cloud-bigquery>=3.7.0
python_requires = >=3.8

[options.entry_points]
console_scripts =
    bq-estimator = bq_estimator:main
